# xtruss

./: .cirrus.yml  .gitignore  Buildscr  CMakeLists.txt  LICENCE  Makefile.am  README  README.md  configure.ac  proxy.c  putty.h  ssh.h  sshauxcrypt.c  uxxtruss.c  version.h  xtruss-macros.h  xtruss-proxy.c  xtruss-record.c  xtruss-trace.c  xtruss.but  xtruss.c  xtruss.h
cmake/: cmake.h.in  setup.cmake
crypto/: CMakeLists.txt
doc/: CMakeLists.txt  mancfg.but
unix/: CMakeLists.txt  console.c  platform.h  unix.h  ux_x11.c  uxcons.c  uxxtruss.c
utils/: CMakeLists.txt
